--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<!-- #1. attaching my html code to a controller of stimulus. my controller is called counter. data-controller="nameOfStimulusController" -->
+
+<div class="flex-center mt-4" data-controller="counter">
+  <!-- #2.the element you want to update (the counter): target, querySelector/getElementByID -->
+  <div class="counter">
+    <!-- data-controllerStimulus-name-target="nameTarget" -->
+    <span data-counter-target="count"><%= @restaurant_count %></span>
+
+  </div>
+  <!-- #3.the element listening to an event (the button) -->
+  <!--  data-action="eventType->stimulusControllerName#FunctioName" -->
+  <!-- document.addEventListener('click', functionname) -->
+  <button class="btn btn-outline-secondary" data-action="click->counter#refresh">Refresh counter</button>
+</div>
+
+
+<!-- when the user is clicking on the button refresh, it should trigger a fetch request in js, to get all the restaurants from our DB -->
+
