--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,5 @@
+<%= @restaurant_count  %>
+
 <h1><%= @restaurant.name %> <small><%= @restaurant.address %></small></h1>
 <h2>
   <%#= pluralize(@restaurant.reviews.size, "review") %>
@@ -11,13 +13,13 @@
     Be the first to leave a review for <%= @restaurant.name %>
   <% else %>
     <% @restaurant.reviews.each do |review| %>
-      <p><%= review.content %></p>
+      <p id="review-<%= review.id %>"><%= review.content %></p>
     <% end %>
   <% end %>
 </div>
 
 <!-- form inline to create a review -->
-<%= simple_form_for([ @restaurant, @review ]) do |f| %>
+<%= simple_form_for([ @restaurant, @review], remote: true) do |f| %>
   <%= f.input :content, as: :text %>
   <%= f.button :submit, class: 'btn btn-primary' %>
 <% end %>
